// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration for error screen  > should throw an error when trying to access a service on an error screen 1`] = `[Error: runtime:invalid-state: Hook cannot be used within the error screen.]`;

exports[`reports a helpful error when package metadata is missing 1`] = `[Error: runtime:missing-package: Package 'packageMissingFromMetadata' was not found in the application's metadata while it attempted to reference the interface 'test.Provider'. Check that the dependency is declared correctly in the packages that use 'packageMissingFromMetadata'.]`;

exports[`should allow access to all services via react hook 1`] = `
<span>
  Joined Values: TEST1,TEST2,TEST3
</span>
`;

exports[`should allow access to service via react hook 1`] = `
<span>
  Hello TEST
</span>
`;

exports[`should allow access to service with qualifier via react hook 1`] = `
<span>
  Hello TEST
</span>
`;

exports[`should be able to read properties from react component 1`] = `
<span>
  Hello USER
</span>
`;

exports[`should deny access to all services if declaration is missing 1`] = `[Error: runtime:undeclared-dependency: Package 'test' did not declare an UI dependency on all services implementing interface 'test.Provider'. Add the dependency ("all": true) to the package configuration or remove the usage.]`;

exports[`should deny access to service when the qualifier does not match 1`] = `[Error: runtime:undeclared-dependency: Package 'test' did not declare an UI dependency on interface 'test.Provider' (qualifier: 'bar'). Add the dependency to the package configuration or remove the usage.]`;

exports[`should get error when using undefined service 1`] = `[Error: runtime:undeclared-dependency: Package 'test' did not declare an UI dependency on interface 'test.InterfaceThatDoesNotExist'. Add the dependency to the package configuration or remove the usage.]`;

exports[`should provide the autogenerated useProperties hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  Hello World!
</div>
`;

exports[`should provide the autogenerated useService hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  TEST
</div>
`;

exports[`should provide the autogenerated useServices hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  TEST1,TEST2
</div>
`;

exports[`should throw error when requesting properties from an unknown package 1`] = `[Error: runtime:internal-error: Package 'test' was not found in application.]`;
